--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" itemprop="description" content=“예약솔루션, 포스솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다." />
+    <meta name="author" content="Wizdia Corp.">
+    <!--facebook meta-->
+    <meta property="og:url"                content="http://wizdia.net/" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Wizdia Corp." />
+    <meta property="og:description"        content="예약솔루션, 포스솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다." />
+    <meta property="og:image"              content="http://wizdia.net/img/header-bg.jpg" />
+    <!--twitter meta-->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Wizdia Corp. ">
+    <meta name="twitter:description" content="예약솔루션, 포스솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다.">
+    <meta name="twitter:image" content="http://wizdia.net/img/header-bg.jpg">
+    <meta name="twitter:domain" content="http://wizdia.net">
 
     <title>Wizdia Corp.</title>
 
