--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" itemprop="description" content=“예약솔루션, 포스솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다." />
+    <meta name="description" itemprop="description" content=“예약솔루션, POS솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다." />
     <meta name="author" content="Wizdia Corp.">
     <!--facebook meta-->
     <meta property="og:url"                content="http://wizdia.net/" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="Wizdia Corp." />
-    <meta property="og:description"        content="예약솔루션, 포스솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다." />
+    <meta property="og:description"        content="예약솔루션, POS솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다." />
     <meta property="og:image"              content="http://wizdia.net/img/header-bg.jpg" />
     <!--twitter meta-->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Wizdia Corp. ">
-    <meta name="twitter:description" content="예약솔루션, 포스솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다.">
+    <meta name="twitter:description" content="예약솔루션, POS솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다.">
     <meta name="twitter:image" content="http://wizdia.net/img/header-bg.jpg">
     <meta name="twitter:domain" content="http://wizdia.net">
 
