--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         </li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="fb.me/wizdiacorp"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
