--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
                     <ul class="list-inline social-buttons">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="http://fb.me/wizdiacorp"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="fb.me/wizdiacorp"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
