--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="mail2 text-center">
                 <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
+                        <a href="https://pf.kakao.com/_Uxcxgnxl#none"><i class="fa fa-comments fa-stack-1x fa-inverse"></i></a>
                 </span>
                 <div class="text-center">
                     <a href="mailto:?cc=admin@wizdia.net&bcc=evajeong@wizdia.net" >admin@wizdia.net</a>
@@ -320,11 +320,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/Wizdia1"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="http://fb.me/wizdiacorp"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://wizdia.modoo.at/"><i class="fa fa-home"></i></a>
                         </li>
                     </ul>
                 </div>
