--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" itemprop="description" content=“예약솔루션, POS솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다." />
     <meta name="author" content="Wizdia Corp.">
+    <link rel="canonical" href="http://www.wizdia.net/index.html">
     <!--facebook meta-->
     <meta property="og:url"                content="http://wizdia.net/" />
     <meta property="og:type"               content="website" />
