--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
     <meta name="twitter:description" content="예약솔루션, POS솔루션, 모바일홈페이지, 쇼핑몰, 중소규모 매장을 위한좀 더 나은 세상을 만듭니다.">
     <meta name="twitter:image" content="http://wizdia.net/img/header-bg.jpg">
     <meta name="twitter:domain" content="http://wizdia.net">
+    <span itemscope itemtype="http://schema.org/Organization">
+      <link itemprop="url" href="http://www.wizdia.net">
+      <a itemprop="sameAs" href="https://www.facebook.com/wizdiacorp">FB</a>
+      <a itemprop="sameAs" href="https://twitter.com/wizdia1">Twitter</a>
+      <a itemprop="sameAs" href="http://www.wizdia.net">사이트</a>
+    </span>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "http://www.wizdia.net",
+      "logo": "http://wizdia.net/img/header-bg.jpg"
+    }
+    </script>
                                                            
     <title>Wizdia Corp.</title>
 
