--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <meta name="twitter:domain" content="http://wizdia.net">
     <span itemscope itemtype="http://schema.org/Organization">
       <link itemprop="url" href="http://www.wizdia.net">
-      <a itemprop="sameAs" href="https://www.facebook.com/wizdiacorp">FaceBook 페이지</a>
-      <a itemprop="sameAs" href="https://twitter.com/wizdia1">Twitter 페이지</a>
-      <a itemprop="sameAs" href="https://wizdia.modoo.at">연계 사이트</a>
+      <a itemprop="sameAs" href="https://www.facebook.com/wizdiacorp">FB</a>
+      <a itemprop="sameAs" href="https://twitter.com/wizdia1">Twitter</a>
+      <a itemprop="sameAs" href="https://wizdia.modoo.at">연계사이트</a>
     </span>
                                                            
     <title>Wizdia Corp.</title>
